--- a/src/assests/css/land.css
+++ b/src/assests/css/land.css
@@ -3,14 +3,9 @@
 
 .land-page {
     padding: 0px 60px;
+    margin-top: 60px;
 }
-.carousel {
-    background-color: white!important;
-  }
-.carousel slide{
-    background-color: white!important;
 
-}
 .best {
     font-family: "Outfit", sans-serif;
     color: #454444;
